Freedom Sanbox Ant Deploy/src/objects/Client_Interests__c.object
<CustomObject>
    <customHelp>WealthHelp</customHelp>
    <description>Master-detail object for tracking Client interests and the reasons for the interest.</description>
    <fields>
        <fullName>Client__c</fullName>
        <description>Master detail relationship field that relates Client Interests to Clients (Account)</description>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Client_Interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <description>Is the client interested in buying or selling this security?</description>
        <label>Interest Type</label>
        <picklist>
            <picklistValues>
                <fullName>Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Watch_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Client Interest has been added to the Watch List or not.</description>
        <label>On Watch List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Interest__c</fullName>
        <description>Why is the Client interested?</description>
        <label>Reason for Interest</label>
        <type>TextArea</type>
    </fields>
    <label>Client Interest</label>
    <nameField>
        <label>Symbol/Interest</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>